add ability to see several photos on detailed product page

--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-stripe-checkout": "^2.6.3",
     "redux-persist": "^6.0.0",
     "styled-components": "^6.1.13",
+    "swiper": "^11.1.15",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
